backend2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:   # ✅ CORRECT placement
      containers:
      - name: backend
        image: bhavukm/simple-backend:v1
        ports:
        - containerPort: 5000
