ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /insert
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80

      - path: /data
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
